--- a/xbol/styles/style.css
+++ b/xbol/styles/style.css
@@ -7,22 +7,22 @@
 }
 
 body{
-    background-color: #020235;
-    font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
     padding-top: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #020235;
 }
 
 header{
     height: 20%;
 }
 header > section{
-    flex-basis: 300px;
     display: flex;
+    flex-basis: 300px;
+    justify-content: center;
+    text-align: center;
     text-align: center;
     margin: auto;
-    text-align: center;
-    justify-content: center;
 }
 header > section > span{
     margin: 0 10px;
@@ -36,9 +36,6 @@ header > section > span#vs{
 header > section > span#oplayer{
     color: red;
 }
-header > section > span#oplayer > div{
-    text-shadow: 0px 0px 20px 0px red;
-}
 header > section > span#xplayer{
     color: blue;
 }
@@ -48,13 +45,13 @@ header > section > span > div{
 }
 header > section > span > p{
     width: 100px;
-    text-transform: capitalize;
     font-size: 16px;
+    text-transform: capitalize;
 }
 header > div#winner{
+    font-size: 35px;
     text-align: center;
     text-decoration: line-through;
-    font-size: 35px;
 }
 
 main{
@@ -68,16 +65,29 @@ main{
 main > section{
     display: flex;
     max-width: 300px;
-    border-radius: 10px;
     background-color: red;
     background-color: #80808070;
+    border-radius: 10px;
     box-shadow: 0px 0px 20px 0px darkblue;
 }
 main > section > section > div{
-    text-transform: uppercase;
     height: 100px;
     width: 100px;
+    border: 1px solid black;
     font-size: 5em;
     text-align: center;
-    border: 1px solid black;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+main > section > section > div#b1{
+    border-radius: 10px 0 0 0;
+}
+main > section > section > div#b3{
+    border-radius: 0 10px 0 0 ;
+}
+main > section > section > div#b7{
+    border-radius: 0 0 0 10px ;
+}
+main > section > section > div#b9{
+    border-radius: 0 0 10px 0 ;
 }
