--- a/xbol/styles/style.css
+++ b/xbol/styles/style.css
@@ -52,6 +52,8 @@ header > div#winner{
     font-size: 50px;
     text-align: center;
     text-decoration: line-through;
+    text-transform: uppercase;
+    color: white;
     animation: linear bam .8s;
     scale: 80%;
 }
