--- a/xbol/styles/style.css
+++ b/xbol/styles/style.css
@@ -43,10 +43,10 @@ header > section > span > div{
     text-transform: uppercase;
     font-size: 4em;
 }
-header > section > span > p{
+header > section > span > span.name_player{
     width: 100px;
     font-size: 16px;
-    text-transform: capitalize;
+    text-transform: uppercase;
 }
 header > div#winner{
     font-size: 50px;
