--- a/xbol/styles/style.css
+++ b/xbol/styles/style.css
@@ -32,6 +32,16 @@ section#pop-up > div{
     padding: 10px;
     border-radius: 5px;
     background-image: linear-gradient(to right, red,#0000c4);
+    animation: show 1s linear;
+}
+@keyframes show {
+    0%{
+        scale: 0%;
+    } 50%{
+        scale: 103%;
+    } 100%{
+        scale: 100%;
+    }
 }
 section#pop-up h2{
     display: inline;
@@ -68,8 +78,8 @@ section#pop-up > div > div > label#x_name{
     color: blue;
 }
 section#pop-up > div > div > input{
-    height: 30px;
-    width: 190px;
+    padding: 5px;
+    font-size: 16px;
 }
 section#pop-up > div > div > input#iplayer_o:focus-within{
     border: 1px solid red;
@@ -80,9 +90,9 @@ section#pop-up > div > div > input#iplayer_x:focus-within{
     outline: 1px solid blue;
 }
 section#pop-up > div > input{
+    display: block;
     width: 100px;
     height: 30px;
-    display: block;
     margin-top: 500px;
     margin: auto;
     text-transform: uppercase;
